<resources>
    <string name="app_name">WineManager</string>
    <string name="Description">Description</string>
    <string name="Year">Production Year</string>
    <string name="about">About</string>
    <string name="rate_me">Rate me!</string>
    <string name="wines">Wines</string>
    <string name="delete_wine">Delete Wine</string>
    <string name="add_wine">Add Wine</string>
    <string name="Name">Name*:</string>
    <string name="Grapes">Grapes*:</string>
    <string name="Country">Country*:</string>
    <string name="Region">Region:</string>
    <string name="Add">Add</string>
    <string name="Mandatory">All the Fields with * are mandatory</string>
    <string name="wineCreated">Wine added</string>
    <string name="AddImage">Add picture</string>
    <string name="EnterWineName">Wine name</string>
    <string name="Delete">Delete</string>
    <string name="aboutManager">About WineManager</string>
    <string name="credits">Developed by Bejan Alex</string>
    <string name="rating">You have more than 3 ratings</string>
    <string name="no_ratings">You have less than 3 ratings</string>
    <string name="rating_send">Rate saved!</string>
    <string name="add_rating">Add you rating:</string>
    <string name="rating_">Rating:</string>
    <string name="wine_manager">WineManager</string>
    <string name="addCountry">Add country</string>
    <string name="pie_chart">Pie Chart</string>
</resources>
